--- a/NEWS
+++ b/NEWS
@@ -1,1 +1,13 @@
-First release. What do you expect?
+0.1.1:
+ * Added SpamAssassin 2.0+ field "X-Spam-Checker-Version"
+ * Changed behaviour as follows:
+   - Old (already present) "X-Spam" fields are passed to SpamAssassin again,
+     now it is up to SpamAssassin to make sure its not being lied to by 
+     Spammers. 
+   - Only mail that was previously marked being no Spam will get modified.
+     Reported Spam will remain unchanged.
+
+
+0.1.0:
+
+First release. What do you expect? :-)
