Update with my name, and add Waider

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,17 +1,19 @@
-$Id: AUTHORS,v 1.2 2002/03/06 13:07:07 greve Exp $
+$Id: AUTHORS,v 1.3 2002/08/18 21:13:03 dnelson Exp $
 
 SpamAssassin Sendmail Mail Filter (Milter) Plugin 
 -------------------------------------------------
 
 Current Maintainer:
-	Michael Brown <michaelb@opentext.com>
+	Dan Nelson <dnelson@allantgroup.com>
 
 
 Authors:
 	Georg C. F. Greve <greve@gnu.org>
 	Michael Brown <michaelb@opentext.com>
+	Dan Nelson <dnelson@allantgroup.com>
 
 
 Bugfixes/reports contributed by:
 	Mikhail Teterin <mi@corbulon.video-collage.com>
 	Michael Brown <michaelb@opentext.com>
+	Waider <waider+savannah@waider.ie>
