--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-$Id: AUTHORS,v 1.3 2002/08/18 21:13:03 dnelson Exp $
+$Id: AUTHORS,v 1.4 2002/11/17 23:01:00 dnelson Exp $
 
 SpamAssassin Sendmail Mail Filter (Milter) Plugin 
 -------------------------------------------------
@@ -14,6 +14,8 @@ Authors:
 
 
 Bugfixes/reports contributed by:
-	Mikhail Teterin <mi@corbulon.video-collage.com>
 	Michael Brown <michaelb@opentext.com>
+	Mikhail Teterin <mi@corbulon.video-collage.com>
+	Patrick Monnerat <pm@datasphere.ch>
+	Simon Josefsson <jas@extundo.com>
 	Waider <waider+savannah@waider.ie>
