--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,16 @@
-0.1.2:
+0.1.3: (2002-12-27)
+ * -m option disables body, Subject:, and Content-Type: header
+   modification.
+ * -r option tells sendmail to reject the message if it exceeds a given
+   score.
+ * -u option passes recipient username to spamc.
+ * Fixed illegal use of freed memory causing message loss on some
+   platforms.
+ * Fixed header doubling problem, and cleaned up the case where
+   incoming messages already have X-Spam* headers
+ * Updated RPM files.
 
+0.1.2: (2002-08-18)
  * Many portability fixes.  Should build on any *BSD, Linux, Solaris,
    or Tru64 box, with any milter-compatible sendmail, with any
    compiler.
@@ -14,7 +25,7 @@
  * -f option forks the milter into the background.
  * -d debugging option.
 
-0.1.1:
+0.1.1: (2002-01-31)
  * Added SpamAssassin 2.0+ field "X-Spam-Checker-Version"
  * Changed behaviour as follows:
    - Old (already present) "X-Spam" fields are passed to SpamAssassin again,
@@ -23,7 +34,5 @@
    - Only mail that was previously marked being no Spam will get modified.
      Reported Spam will remain unchanged.
 
-
-0.1.0:
-
-First release. What do you expect? :-)
+0.1.0: (2002-01-16)
+ * First release. What do you expect? :-)
