--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+$Id: NEWS,v 1.7 2002/12/27 21:52:45 dnelson Exp $
+
 0.1.3: (2002-12-27)
  * -m option disables body, Subject:, and Content-Type: header
    modification.
