--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,8 @@
-$Id: NEWS,v 1.7 2002/12/27 21:52:45 dnelson Exp $
+$Id: NEWS,v 1.8 2002/12/31 20:17:31 dnelson Exp $
+
+0.1.3a: (2002-12-31)
+ * Fixed hanging problem when processing a message with no headers at
+   all.  Sort of serious, so it gets its own release.
 
 0.1.3: (2002-12-27)
  * -m option disables body, Subject:, and Content-Type: header
