--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-$Id: README,v 1.2 2002/01/16 22:10:00 greve Exp $
+$Id: README,v 1.3 2003/06/06 20:48:27 dnelson Exp $
 
 Spamass-Milter, a small
  - SpamAssassin Sendmail Mail Filter (Milter) Plugin 
@@ -76,9 +76,10 @@ update-rc.d command for this under Debian.
 
 Now you need to make sendmail use the plugin. I always recommend
 configuring sendmail through m4 & the sendmail.mc files. In this case
-adding the line
+adding the lines
 
-INPUT_MAIL_FILTER(`spamassassin', `S=local:/var/run/sendmail/spamass.sock, F=, T=C:15m;S:4m;R:4m;E:10m')
+INPUT_MAIL_FILTER(`spamassassin', `S=local:/var/run/sendmail/spamass.sock, F=, T=C:15m;S:4m;R:4m;E:10m')dnl
+define(`confMILTER_MACROS_CONNECT',`b, j, _, {daemon_name}, {if_name}, {if_addr}')dnl
 
 should do the trick. Of course you need to modify the path of the
 socket if you put another one into the startup script. The timeouts
