--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-$Id: TODO,v 1.2 2003/06/09 20:27:51 dnelson Exp $
+$Id: TODO,v 1.3 2003/06/09 21:24:03 dnelson Exp $
 
 Clean up the reject/copy to spambox/deliver to recipient options:
 
@@ -8,9 +8,10 @@ Clean up the reject/copy to spambox/deliver to recipient options:
 	none     N  Y  Y
 	-b       N  Y  N
 	default  N  N  Y
-	none     N  N  N
+	-b null  N  N  N
 	
-	With the current flags there is no way to silently drop the
-	mail or both copy and deliver.
+	With the current flags there is no way to simply add the
+	spambox to the list of recipients.  You can silently drop by
+	using -b to redirect to a /dev/null sendmail alias.
 
 Try and expand aliases before checking for -u usernames
