--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-$Id: README,v 1.3 2003/06/06 20:48:27 dnelson Exp $
+$Id: README,v 1.4 2003/06/10 18:42:38 dnelson Exp $
 
 Spamass-Milter, a small
  - SpamAssassin Sendmail Mail Filter (Milter) Plugin 
@@ -9,35 +9,10 @@ For information about Sendmail or SpamAssassin, please see
 	http://www.spamassassin.org
 
 
-IMPORTANT NOTICE:
-*****************
- THIS PROGRAM IS STILL MORE OR LESS A HACK. IT WORKS FOR ME, BUT IT
- MIGHT NOT WORK FOR YOU - NOT WITHOUT SOME MODIFICATIONS, THAT IS. I
- AM NOT AWARE OF ANY BUGS RIGHT NOW. THAT DOES NOT MEAN THE PROGRAM
- DOESN'T HAVE BUGS. IN FACT CHANCES ARE GOOD THAT IT DOES CONTAIN BUGS
- I DIDN'T FIND.
-
-
-Platform note:
---------------
-
-I built and used it on Debian GNU/Linux (woody). It worked fine there
-and should for you (given that you have the appropriate packages
-installed). It should work on other distributions and other Un*x
-derivates - I will not support it on them, though.
-
-
-Maintainer wanted:
-------------------
-
-In fact I don't have a lot of time to support this program, so if
-anyone else wants to start doing so, please let me know.
-
-
 Installation instructions:
 --------------------------
 
-You need to have sendmail + sendmail libmilter (available since
+You need to have sendmail + sendmail's libmilter (available since
 version 8.11, afaik, 8.12.+ recommended) installed. Depending on your
 distribution you may need to recompile sendmail for this. 
 
