fix crash on fork failure

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.21 2004/09/07 01:12:22 dnelson Exp $
+$Id: NEWS,v 1.22 2004/09/21 21:06:35 dnelson Exp $
 
 unreleased:
  * -M option which disables all message modifications
@@ -8,6 +8,7 @@ unreleased:
  * -f truly daemonizes now, instead of simply forking
  * -P option to create a pidfile
  * Supports both Spamassassin 2.x and 3.0 X-Spam-Status: headers
+ * Fixed possible crash when a fork() call fails
 
 0.2.0: (2003-06-26)
  * -b/-B options to redirect tagged messages to another email address.
