--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-$Id: TODO,v 1.11 2004/03/27 20:05:28 dnelson Exp $
+$Id: TODO,v 1.12 2004/09/22 16:24:25 dnelson Exp $
 
 *DONE* Clean up the Reject/Copy to spambox/Deliver to recipient options:
 
@@ -27,3 +27,8 @@ Option 2 - overload -r.  -r "20,go away"
 Fix ipv6 crashes
 
 Add tcp_wrappers support to limit who can talk to our TCP socket
+
+Either keep the input body or a checksum of it, and only replace the
+body when SA changes it
+
+Collapse the variables running+connected+pid into one variable
