--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-$Id: TODO,v 1.12 2004/09/22 16:24:25 dnelson Exp $
+$Id: TODO,v 1.13 2004/09/23 20:27:39 dnelson Exp $
 
 *DONE* Clean up the Reject/Copy to spambox/Deliver to recipient options:
 
@@ -23,6 +23,10 @@ Add exclude lists to -i (tightest match wins)
 Allow customized reject message with -r.  
 Option 1 - new flag.  -R "go away"
 Option 2 - overload -r.  -r "20,go away"
+
+Add a score range to -bBr:
+	-b ">5<20 bucket"
+	-r ">=20"
 
 Fix ipv6 crashes
 
