- Make our fake sendmail Received: header even better.
- Fix a silly bug in cmp_nocase_partial that made it return true if
  either string was a prefix of the other (it should return true only
  if s is a prefix of s2).

Thanks to Yoshitaka Tokugawa.

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-$Id: README,v 1.4 2003/06/10 18:42:38 dnelson Exp $
+$Id: README,v 1.5 2005/04/07 02:04:24 dnelson Exp $
 
 Spamass-Milter, a small
  - SpamAssassin Sendmail Mail Filter (Milter) Plugin 
@@ -54,7 +54,8 @@ configuring sendmail through m4 & the sendmail.mc files. In this case
 adding the lines
 
 INPUT_MAIL_FILTER(`spamassassin', `S=local:/var/run/sendmail/spamass.sock, F=, T=C:15m;S:4m;R:4m;E:10m')dnl
-define(`confMILTER_MACROS_CONNECT',`b, j, _, {daemon_name}, {if_name}, {if_addr}')dnl
+define(`confMILTER_MACROS_CONNECT',`t, b, j, _, {daemon_name}, {if_name}, {if_addr}')dnl
+define(`confMILTER_MACROS_HELO',`s, {tls_version}, {cipher}, {cipher_bits}, {cert_subject}, {cert_issuer}')dnl
 
 should do the trick. Of course you need to modify the path of the
 socket if you put another one into the startup script. The timeouts
