add a line for confMILTER_MACROS_ENVRCPT

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-$Id: README,v 1.6 2005/08/15 15:10:47 dnelson Exp $
+$Id: README,v 1.7 2006/04/19 15:40:36 dnelson Exp $
 
 Spamass-Milter, a small
  - SpamAssassin Sendmail Mail Filter (Milter) Plugin 
@@ -57,6 +57,7 @@ adding the lines
 INPUT_MAIL_FILTER(`spamassassin', `S=local:/var/run/sendmail/spamass.sock, F=, T=C:15m;S:4m;R:4m;E:10m')dnl
 define(`confMILTER_MACROS_CONNECT',`t, b, j, _, {daemon_name}, {if_name}, {if_addr}')dnl
 define(`confMILTER_MACROS_HELO',`s, {tls_version}, {cipher}, {cipher_bits}, {cert_subject}, {cert_issuer}')dnl
+define(`confMILTER_MACROS_ENVRCPT',`r, v, Z')dnl
 
 should do the trick. Of course you need to modify the path of the
 socket if you put another one into the startup script. The timeouts
